refactor: remove Object and User controllers and related models from the project
